add author section from burger

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
         <div class="burgers_box mt-4">
             <div class="container">
-                <div class="row">
+                <div class="row ml-0">
                     <!-- Start Left Big Burger -->
-                    <div class="col-12 col-md-6 burger_big text-center">
+                    <div class="col-12 col-md-5 burger_big text-center">
                         <!-- Boluts -->
                         <div class="row">
                             <div class="col">
@@ -79,18 +79,18 @@
                         <h2 class="text-left text-capitalize title">classic burger</h2>
                         <!-- line of info -->
                         <div class="row mt-4">
-                            <div class="col">
+                            <div class="col p-0">
                                 <span class="sp_round">fat-<strong class="strong_g">26g</strong></span>
                             </div>
-                            <div class="col">
+                            <div class="col p-0">
                                 <span class="sp_round sp_round-two">sturates-<strong
                                         class="strong_g">10g</strong></span>
                             </div>
-                            <div class="col">
+                            <div class="col p-0">
                                 <span class="sp_round sp_round-three">sugars-<strong
                                         class="strong_g">18g</strong></span>
                             </div>
-                            <div class="col">
+                            <div class="col p-0">
                                 <span class="sp_round">salt-<strong class="strong_g">1g</strong></span>
                             </div>
                         </div>
@@ -121,12 +121,221 @@
                         </div>
                     </div>
                     <!-- End Left Big Burger -->
-                    <!-- Start Right Big Burger -->
-                    <div class="col-12 col-md-3">two</div>
-                    <div class="col-12 col-md-3">three</div>
-                    <!-- End Right Big Burger -->
+                    <!-- Start Right Big Burger ONE -->
+                    <div class="col-12 col-md-3 right_burger_one">
+                        <!-- Boluts -->
+                        <div class="row">
+                            <div class="col">
+                                <div class="bults text-left">
+                                    <div class="boluts">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="kcal float-right">
+                                    <div class="kcal_circle">
+                                        <h6 class="mb-0">472</h6>
+                                        <h6>kcal</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Boluts -->
+                        <!-- Start Image -->
+                        <img src="../burger/images/veggan.png" alt="" class="img-fluid">
+                        <h2 class="title text-capitalize text-center">double burger</h2>
+                        <p class="disc text-center">Lorem ipsum dolor consectetur adipisicing elit. Voluptatem
+                            cumque corrupti</p>
+                        <!-- Start Values -->
+                        <div class="row">
+                            <div class="col-6 col-md-4 text-left">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn_custum btn_minus"><span
+                                            class="font-weight-bold">-</span></button>
+                                    <button type="button" class="btn_custum">0</button>
+                                    <button type="button" class="btn_custum btn_plus"><span
+                                            class="font-weight-bold">+</span></button>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-8 text-right">
+                                <span class="num">$19</span>
+                                <button type="button" class="btn_shop ml-3">
+                                    <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <!-- End Values -->
+                    </div>
+                    <!-- End Right Big Burger ONE-->
+                    <!-- Start Right Big Burger TWo-->
+                    <div class="col-12 col-md-3 right_burger_one mr-5">
+                        <!-- Boluts -->
+                        <div class="row">
+                            <div class="col">
+                                <div class="bults text-left">
+                                    <div class="boluts">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="kcal float-right">
+                                    <div class="kcal_circle">
+                                        <h6 class="mb-0">472</h6>
+                                        <h6>kcal</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Boluts -->
+                        <!-- Start Image -->
+                        <img src="../burger/images/mushroomBurger.png" alt="" class="img-fluid">
+                        <h2 class="title text-capitalize text-center">double burger</h2>
+                        <p class="disc text-center">Lorem ipsum dolor consectetur adipisicing elit. Voluptatem
+                            cumque corrupti</p>
+                        <!-- Start Values -->
+                        <div class="row">
+                            <div class="col-6 col-md-4 text-left">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn_custum btn_minus"><span
+                                            class="font-weight-bold">-</span></button>
+                                    <button type="button" class="btn_custum">0</button>
+                                    <button type="button" class="btn_custum btn_plus"><span
+                                            class="font-weight-bold">+</span></button>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-8 text-right">
+                                <span class="num">$19</span>
+                                <button type="button" class="btn_shop ml-3">
+                                    <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <!-- End Values -->
 
+
+                    </div>
+                    <!-- End Right Big Burger TWo-->
                 </div>
+
+                <!-- Two Row -->
+
+                <div class="row up_to">
+                    <!-- Start Left Big Burger -->
+                    <div class="col-12 col-md-5"></div>
+                    <!-- End Left Big Burger -->
+                    <!-- Start Right Big Burger ONE -->
+                    <div class="col-12 col-md-3 right_burger_one">
+                        <!-- Boluts -->
+                        <div class="row">
+                            <div class="col">
+                                <div class="bults text-left">
+                                    <div class="boluts">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="kcal float-right">
+                                    <div class="kcal_circle">
+                                        <h6 class="mb-0">472</h6>
+                                        <h6>kcal</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Boluts -->
+                        <!-- Start Image -->
+                        <img src="../burger/images/veggan.png" alt="" class="img-fluid">
+                        <h2 class="title text-capitalize text-center">double burger</h2>
+                        <p class="disc text-center">Lorem ipsum dolor consectetur adipisicing elit. Voluptatem
+                            cumque corrupti</p>
+                        <!-- Start Values -->
+                        <div class="row">
+                            <div class="col-6 col-md-4 text-left">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn_custum btn_minus"><span
+                                            class="font-weight-bold">-</span></button>
+                                    <button type="button" class="btn_custum">0</button>
+                                    <button type="button" class="btn_custum btn_plus"><span
+                                            class="font-weight-bold">+</span></button>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-8 text-right">
+                                <span class="num">$19</span>
+                                <button type="button" class="btn_shop ml-3">
+                                    <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <!-- End Values -->
+                    </div>
+                    <!-- End Right Big Burger ONE-->
+                    <!-- Start Right Big Burger TWo-->
+                    <div class="col-12 col-md-3 right_burger_one mr-5">
+                        <!-- Boluts -->
+                        <div class="row">
+                            <div class="col">
+                                <div class="bults text-left">
+                                    <div class="boluts">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="kcal float-right">
+                                    <div class="kcal_circle">
+                                        <h6 class="mb-0">472</h6>
+                                        <h6>kcal</h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Boluts -->
+                        <!-- Start Image -->
+                        <img src="../burger/images/mushroomBurger.png" alt="" class="img-fluid">
+                        <h2 class="title text-capitalize text-center">double burger</h2>
+                        <p class="disc text-center">Lorem ipsum dolor consectetur adipisicing elit. Voluptatem
+                            cumque corrupti</p>
+                        <!-- Start Values -->
+                        <div class="row">
+                            <div class="col-6 col-md-4 text-left">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <button type="button" class="btn_custum btn_minus"><span
+                                            class="font-weight-bold">-</span></button>
+                                    <button type="button" class="btn_custum">0</button>
+                                    <button type="button" class="btn_custum btn_plus"><span
+                                            class="font-weight-bold">+</span></button>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-8 text-right">
+                                <span class="num">$19</span>
+                                <button type="button" class="btn_shop ml-3">
+                                    <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <!-- End Values -->
+
+
+                    </div>
+                    <!-- End Right Big Burger TWo-->
+                </div>
+
+
             </div>
         </div>
     </header>
